# robotics

./: .travis.yml  README.md
first_project/: CMakeLists.txt  README.md  package.xml
first_project/include/first_project/: gazebo_wheel_encoder.h
first_project/launch/: first_project.launch
first_project/models/assembly5/: model.config  model.sdf
first_project/src/: gazebo_wheel_encoder.cpp
first_project/worlds/: first_project.world
